--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,12 @@ theme:
     - navigation.sections
     - search.highlight
     - content.code.copy 
+    - navigation.indexes
 markdown_extensions:
   - admonition
   - pymdownx.details
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
